force-app/main/default/objects/OCX_Survey_Driver_Score__c/OCX_Survey_Driver_Score__c.object-meta.xml
<CustomObject>
    <description>Per-account JTP/OD driver score by wave. Source: survey_driver_account.</description>
    <label>Survey Driver Score</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Driver Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>