force-app/main/default/objects/OCX_Survey_Driver_Score__c/fields/OCX_Account__c.field-meta.xml
<CustomField>
    <fullName>OCX_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Survey Driver Scores</relationshipLabel>
    <relationshipName>OCX_Survey_Driver_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>