force-app/main/default/objects/OCX_Survey_Driver_Score__c/fields/OCX_Is_Overall__c.field-meta.xml
<CustomField>
    <fullName>OCX_Is_Overall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Overall</label>
    <type>Checkbox</type>
</CustomField>