force-app/main/default/objects/OCX_Survey_Driver_Score__c/fields/OCX_JTP__c.field-meta.xml
<CustomField>
    <fullName>OCX_JTP__c</fullName>
    <label>Job To Perform</label>
    <length>120</length>
    <type>Text</type>
</CustomField>