force-app/main/default/objects/OCX_Survey_Driver_Score__c/fields/OCX_OD__c.field-meta.xml
<CustomField>
    <fullName>OCX_OD__c</fullName>
    <label>Outcome Driver</label>
    <length>120</length>
    <type>Text</type>
</CustomField>