force-app/main/default/objects/OCX_Survey_Driver_Score__c/fields/OCX_Rating__c.field-meta.xml
<CustomField>
    <fullName>OCX_Rating__c</fullName>
    <label>Rating (0-10)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>