force-app/main/default/objects/OCX_Survey_Driver_Score__c/fields/OCX_Rating_Class__c.field-meta.xml
<CustomField>
    <fullName>OCX_Rating_Class__c</fullName>
    <label>Rating Class</label>
    <length>40</length>
    <type>Text</type>
</CustomField>