force-app/main/default/objects/OCX_Survey_Driver_Score__c/fields/OCX_Respondents__c.field-meta.xml
<CustomField>
    <fullName>OCX_Respondents__c</fullName>
    <label>Respondents</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>