force-app/main/default/objects/OCX_Survey_Driver_Score__c/fields/OCX_Score_ID__c.field-meta.xml
<CustomField>
    <fullName>OCX_Score_ID__c</fullName>
    <description>&lt;OCX Account ID&gt;::&lt;wave&gt;::&lt;jtp&gt;::&lt;od&gt;.</description>
    <externalId>true</externalId>
    <label>OCX Score ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>